# pyls

./: .gitignore  README.md  pyproject.toml  structure.json
src/: pyls.py
tests/: test_pyls.py
